@@ -3,6 +3,7 @@
 #include "UserInterface/Components/MainPanel/DateTime.h"
 #include "UserInterface/Components/MainPanel/Calendar.h"
 #include "UserInterface/Components/MainPanel/StopWatch.h"
+#include "UserInterface/Components/MainPanel/SettingsPanel.h"
 #include "UserInterface/Components/MainComponent.h"
 #include "System/AppsStatusMonitor.h"
 
@@ -22,9 +23,9 @@ class MainPanel {
 
 	protected:
 
-		const int8_t APPS = 2;
+		const int8_t APPS = 3;
 
-		MainComponent *apps[3];
+		MainComponent *apps[4];
 		int8_t currentApp = 0;
 
 		void clear();
@@ -33,6 +34,7 @@ class MainPanel {
 			this->apps[0] = new DateTime();
 			this->apps[1] = new Calendar();
 			this->apps[2] = new StopWatch();
+			this->apps[3] = new SettingsPanel();
 		}
 
 };
