@@ -3,6 +3,7 @@ cyberWatch 0.2
  - partially support for TTGO Watch V2 (motor operation only if LILYGO_WATCH_HAS_MOTOR)
  - synchronize date & time with computer during compile/upload
  - settings class for alwaysOn feature (instead alwaysOn boolean on DateTime component)
+ - screen for settins (with touch control - on/off display on)
 
 cyberWatch 0.1
 ========================
